[URLS] Handle form with multiple entities

--- a/Resources/views/Form/refresh_reload.html.twig
+++ b/Resources/views/Form/refresh_reload.html.twig
@@ -1,4 +1,4 @@
 <script>
     window.opener.location.reload();
-    document.location = '{{ redirect_to }}';
+    document.location = '{{ redirect_to | raw }}';
 </script>
