[HTML] Add markup

--- a/Resources/views/Form/refresh_reload.html.twig
+++ b/Resources/views/Form/refresh_reload.html.twig
@@ -1,4 +1,9 @@
+<html>
+<head>
 <script>
     window.opener.location.reload();
     document.location = '{{ redirect_to | raw }}';
 </script>
+</head>
+<body></body>
+</html>
